--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -5,7 +5,7 @@
     overflow: hidden;
     border-radius: .5rem;
     box-shadow: 0 0 20px rgba(184, 184, 184, 0.01);
-    background: white;
+    background: #3b3f41;
 }
 body {
     margin: 0;
