--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -5,7 +5,8 @@
     overflow: hidden;
     border-radius: .5rem;
     box-shadow: 0 0 20px rgba(184, 184, 184, 0.01);
-    background: #3b3f41;
+    background: #303335;
+    /*background: #e0e1e3;*/
     display: flex;
     flex-direction: column;
     .devui-fixed-overlay {
@@ -17,4 +18,5 @@ body {
     font-family: Arial, sans-serif;
     overflow: hidden;
     background: transparent;
+    --wails-draggable:drag;
 }
