--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,16 +7,21 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    border-radius: .5rem;
+    border-radius: 10px;
+    border-color: rgba(95, 95, 99, 0.49);
+    border-width: thin;
+    border-style: solid;
 }
 body {
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     font-family: Arial, sans-serif;
-    overflow: hidden;
     background: transparent;
-    border-radius: .5rem;
+    overflow: hidden;
 }
 html {
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
